# aoc2021-rust

./: Cargo.toml  README.md
src/day01/: README.md
src/day02/: README.md
src/day03/: README.md
src/day04/: README.md
src/day05/: README.md
src/day06/: README.md
src/day07/: README.md
src/day08/: README.md
src/day09/: README.md
src/day10/: README.md
src/day11/: README.md
src/day12/: README.md
src/day13/: README.md
src/day14/: README.md  input.txt
src/day15/: README.md
src/day16/: README.md
src/day17/: README.md
src/day18/: README.md
src/day19/: README.md
src/day20/: README.md
src/day21/: README.md
src/day22/: README.md
src/day23/: README.md
src/day24/: README.md
src/day25/: README.md
